--- a/ObjectivePointer.uproject
+++ b/ObjectivePointer.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ObjectivePointer",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
